# mlir-toy-tutorial

./: .gitignore  CMakeLists.txt  README.md
cmake/: fetch_mlir.cmake
toy-tutorial/: CMakeLists.txt
toy-tutorial/src/: main.cpp
